# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("ports") {
  sources = [
    "include/ports.h",
    "src/event.h",
    "src/hash_functions.h",
    "src/logging.h",
    "src/message.cc",
    "src/message_queue.cc",
    "src/message_queue.h",
    "src/node.cc",
    "src/node_impl.cc",
    "src/node_impl.h",
    "src/port.cc",
    "src/port.h",
  ]

  include_dirs = [ ".." ]

  defines = [ "INSIDE_CHROMIUM" ]

  deps = [
    "//base",
  ]
}

executable("ports_unittests") {
  testonly = true

  sources = [
    "src/test.cc",
  ]

  defines = [ "INSIDE_CHROMIUM" ]

  deps = [
    ":ports",
    "//testing/gtest",
    "//testing/gtest:gtest_main",
  ]

  include_dirs = [ ".." ]
}

source_set("ports_edk_test_support") {
  testonly = true

  sources = [
    "mojo_system/buffers_unittest.cc",
    "mojo_system/multiprocess_test_base.cc",
    "mojo_system/multiprocess_test_base.h",
    "mojo_system/multiprocess_test_helper.cc",
    "mojo_system/multiprocess_test_helper.h",
    "//mojo/edk/test/scoped_ipc_support.cc",
    "//mojo/edk/test/scoped_ipc_support.h",
  ]

  public_deps = [
    ":ports",
    "//base",
    "//base/test:test_support",
    "//crypto",
    "//mojo/edk/test:test_support_impl",
    "//mojo/public/cpp/environment:standalone",
    "//testing/gtest",
    "//third_party/mojo/src/mojo/edk/system",
  ]

  defines = [ "INSIDE_CHROMIUM" ]

  include_dirs = [ ".." ]
}

executable("ports_edk_unittests") {
  testonly = true

  sources = [
    "mojo_system/pipes_unittest.cc",

    "//mojo/edk/test/run_all_unittests.cc",
  ]

  deps = [
    ":ports",
    ":ports_edk_test_support",
    "//testing/gtest",
  ]

  defines = [ "INSIDE_CHROMIUM" ]

  include_dirs = [ ".." ]
}

executable("ports_edk_perftests") {
  testonly = true

  sources = [
    "mojo_system/pipes_perftest.cc",

    "//mojo/edk/test/run_all_perftests.cc",
  ]

  deps = [
    ":ports",
    ":ports_edk_test_support",
    "//testing/gtest",
  ]

  defines = [ "INSIDE_CHROMIUM" ]

  include_dirs = [ ".." ]
}
