# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("ports") {
  sources = [
    "mojo/edk/system/ports/ports.h",
    "mojo/edk/system/ports/event.h",
    "mojo/edk/system/ports/hash_functions.h",
    "mojo/edk/system/ports/logging.cc",
    "mojo/edk/system/ports/message.cc",
    "mojo/edk/system/ports/message_queue.cc",
    "mojo/edk/system/ports/message_queue.h",
    "mojo/edk/system/ports/node.cc",
    "mojo/edk/system/ports/node_impl.cc",
    "mojo/edk/system/ports/node_impl.h",
    "mojo/edk/system/ports/port.cc",
    "mojo/edk/system/ports/port.h",
    "mojo/edk/system/ports/port_ref.cc",
  ]

  include_dirs = [ "." ]

  deps = [
    "//base",
  ]
}

executable("ports_unittests") {
  testonly = true

  sources = [
    "mojo/edk/system/ports/test.cc",
  ]

  deps = [
    ":ports",
    "//testing/gtest",
    "//testing/gtest:gtest_main",
  ]

  include_dirs = [ "." ]
}

source_set("ports_edk_test_support") {
  testonly = true

  sources = [
    "mojo/edk/system/multiprocess_test_base.cc",
    "mojo/edk/system/multiprocess_test_base.h",
    "mojo/edk/system/multiprocess_test_helper.cc",
    "mojo/edk/system/multiprocess_test_helper.h",

    "//mojo/edk/test/scoped_ipc_support.cc",
    "//mojo/edk/test/scoped_ipc_support.h",
  ]

  public_deps = [
    ":ports",
    "//base",
    "//base/test:test_support",
    "//crypto",
    "//mojo/edk/test:test_support_impl",
    "//mojo/public/cpp/environment:standalone",
    "//testing/gtest",
    "//third_party/mojo/src/mojo/edk/system",
  ]

  include_dirs = [ "." ]
}

executable("ports_edk_unittests") {
  testonly = true

  sources = [
    "mojo/edk/system/buffers_unittest.cc",
    "mojo/edk/system/pipes_unittest.cc",

    "//mojo/edk/test/run_all_unittests.cc",
  ]

  deps = [
    ":ports",
    ":ports_edk_test_support",
    "//testing/gtest",
  ]

  include_dirs = [ "." ]
}

executable("ports_edk_perftests") {
  testonly = true

  sources = [
    "mojo/edk/system/pipes_perftest.cc",

    "//mojo/edk/test/run_all_perftests.cc",
  ]

  deps = [
    ":ports",
    ":ports_edk_test_support",
    "//testing/gtest",
  ]

  include_dirs = [ "." ]
}
