# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("ports") {
  sources = [
    "mojo/edk/system/ports/ports.h",
    "mojo/edk/system/ports/event.h",
    "mojo/edk/system/ports/hash_functions.h",
    "mojo/edk/system/ports/logging.cc",
    "mojo/edk/system/ports/message.cc",
    "mojo/edk/system/ports/message_queue.cc",
    "mojo/edk/system/ports/message_queue.h",
    "mojo/edk/system/ports/node.cc",
    "mojo/edk/system/ports/node_impl.cc",
    "mojo/edk/system/ports/node_impl.h",
    "mojo/edk/system/ports/port.cc",
    "mojo/edk/system/ports/port.h",
    "mojo/edk/system/ports/port_ref.cc",
  ]

  deps = [
    "//base",
  ]
}

executable("ports_unittests") {
  testonly = true

  sources = [
    "test.cc",
  ]

  deps = [
    ":ports",
    "//testing/gtest",
    "//testing/gtest:gtest_main",
  ]
}
