# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("mojo_system") {
  sources = [
    "channel.cc",
    "channel.h",
    "channel_posix.cc",
    "child_node_delegate.cc",
    "child_node_delegate.h",
    "core.cc",
    "core.h",
    "dispatcher.cc",
    "dispatcher.h",
    "message_pipe_dispatcher.cc",
    "message_pipe_dispatcher.h",
    "parent_node_delegate.cc",
    "parent_node_delegate.h",
  ]

  defines = [
    "MOJO_SYSTEM_IMPL_IMPLEMENTATION",
    "MOJO_SYSTEM_IMPLEMENTATION",
  ]

  all_dependent_configs = [ "//mojo/edk/system:system_config" ]

  deps = [
    "//base",
    "//base/third_party/dynamic_annotations",
    "//crypto",
  ]

  public_deps = [
    "../mojo_embedder",
    "..:ports",
    "//mojo/public/c/system",
    "//mojo/public/cpp/system",
    "//mojo/edk/embedder:delegates",
    "//mojo/edk/embedder:platform",
  ]

  if (is_win) {
    cflags = [ "/wd4324" ]  # Structure was padded due to __declspec(align()),
                            # which is uninteresting.
  }

  allow_circular_includes_from = [ "../mojo_embedder" ]

  include_dirs = [ "../.." ]
}
