# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("mojo_system") {
  sources = [
    "channel.cc",
    "channel.h",
    "channel_posix.cc",
    "core.cc",
    "core.h",
    "dispatcher.cc",
    "dispatcher.h",
    "handle_table.cc",
    "handle_table.h",
    "message_pipe_dispatcher.cc",
    "message_pipe_dispatcher.h",
    "node.cc",
    "node.h",
    "node_channel.cc",
    "node_channel.h",
    "ports_message.cc",
    "ports_message.h",
    "shared_buffer_dispatcher.cc",
    "shared_buffer_dispatcher.h",
    "wait_set_dispatcher.cc",
    "wait_set_dispatcher.h",
  ]

  # Sources we can repurpose from the existing EDK impl
  sources += [
    "//mojo/edk/system/async_waiter.cc",
    "//mojo/edk/system/async_waiter.h",
    "//mojo/edk/system/awakable.h",
    "//mojo/edk/system/awakable_list.cc",
    "//mojo/edk/system/awakable_list.h",
    "//mojo/edk/system/configuration.cc",
    "//mojo/edk/system/configuration.h",
    "//mojo/edk/system/handle_signals_state.h",
    "//mojo/edk/system/mapping_table.cc",
    "//mojo/edk/system/mapping_table.h",
    "//mojo/edk/system/options_validation.h",
    "//mojo/edk/system/system_impl_export.h",
    "//mojo/edk/system/waiter.cc",
    "//mojo/edk/system/waiter.h",
  ]

  defines = [
    "MOJO_SYSTEM_IMPL_IMPLEMENTATION",
    "MOJO_SYSTEM_IMPLEMENTATION",
  ]

  all_dependent_configs = [ "//mojo/edk/system:system_config" ]

  deps = [
    "//base",
    "//base/third_party/dynamic_annotations",
    "//crypto",
  ]

  public_deps = [
    "../mojo_embedder",
    "..:ports",
    "//mojo/public/c/system",
    "//mojo/public/cpp/system",
    "//mojo/edk/embedder:delegates",
    "//mojo/edk/embedder:platform",
  ]

  if (is_win) {
    cflags = [ "/wd4324" ]  # Structure was padded due to __declspec(align()),
                            # which is uninteresting.
  }

  allow_circular_includes_from = [ "../mojo_embedder" ]

  include_dirs = [ "../.." ]
}
