# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("embedder") {
  sources = [
    "embedder.cc",
  ]

  defines = [
    "MOJO_SYSTEM_IMPL_IMPLEMENTATION",
    "MOJO_SYSTEM_IMPLEMENTATION",
  ]

  configs += [ "//mojo/edk/system:system_config" ]

  public_deps = [
    "//mojo/edk/embedder:delegates",
    "//mojo/edk/embedder:platform",
    "//mojo/public/cpp/system",
  ]

  deps = [
    "//base",
  ]

  include_dirs = [ "../../.." ]
}
